# CppMicroAgent

./: .gitignore  ADVANCED_IMPROVEMENT_GUIDE.txt  ADVANCED_MECHANISMS_SUMMARY.md  CHANGES_SUMMARY.md  CHANGES_TO_COMPILATION.md  CLEANUP_SUCCESS_SUMMARY.md  COMPARISON_ANALYSIS.md  COMPILATION_FIXES.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_SUMMARY.md  COMPILATION_FLOW.txt  COMPILATION_QUICK_REF.md  COMPILATION_STRATEGY.md  COMPLETE_SAMPLEAPP_IMPROVEMENTS_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  COMPREHENSIVE_COMPARISON_RESULTS.md  COVERAGE_ACHIEVEMENT_FINAL.md  COVERAGE_ACHIEVEMENT_SUMMARY.md  COVERAGE_BY_PROJECT.md  COVERAGE_CLEANUP_STRATEGY.md  COVERAGE_COMPARISON.md  COVERAGE_COMPARISON.txt  COVERAGE_IMPROVEMENT_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY_FINAL.md  COVERAGE_REPORT_LOCATION.md  COVERAGE_VERIFICATION.md  CURRENT_STATUS_TINYXML2.md  CodeWriter.py  ConfigReader.py  CppMicroAgent.cfg  CppMicroAgent.py  CppMicroAgent.pyproj  CppMicroAgent.sln  DEMO_RESULTS.md  ENHANCED_COVERAGE_ANALYSIS.md  ENHANCED_GENERATOR_EXPLANATION.md  EXECUTION_GUIDE.py  FINAL_COVERAGE_RESULTS.md  FINAL_OPTION3_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  (+85 more)
States/: Query.py  StateEnd.py  (+9 more)
TestProjects/SampleApplication/SampleApp/: CMakeLists.txt  SampleApp.h
TestProjects/SampleApplication/SampleApp/inc/: common.h
TestProjects/SampleApplication/SampleApp/src/InterfaceA/: IntfA_rx.cpp  IntfA_tx.cpp  __interfaceA.cmake
TestProjects/SampleApplication/SampleApp/src/InterfaceB/: InterfaceB.cpp  __interfaceB.cmake
TestProjects/SampleApplication/SampleApp/src/ProgramApp/: ProgramApp.h
(+173 files in other folders)
